# glyphy

./: CMakeLists.txt  config.cmake.h
demo/: CMakeLists.txt  demo-common.h  demo-font.cc  demo-fshader.glsl  demo-view.cc
src/: CMakeLists.txt  CMake_Stringize.txt  config.cmake.h  glyphy-blob.cc  glyphy-common.hh  glyphy-geometry.hh  glyphy.h  stringize.cmake
windows/freeglut/lib/x64/: freeglut_static.lib
windows/freeglut/lib/x86/: freeglut_static.lib
windows/freetype/lib/x64/: freetype.lib
windows/freetype/lib/x86/: freetype.lib
windows/glew/lib/x64/: glew.lib
windows/glew/lib/x86/: glew.lib
